[gd_scene load_steps=9 format=3 uid="uid://q241ibfylgww"]

[ext_resource type="FontFile" uid="uid://dq1sidubjd4fq" path="res://Fons/Karina.ttf" id="1_1rerr"]
[ext_resource type="Script" uid="uid://dmnfqnb75qye1" path="res://Scripts/menu.gd" id="1_xhh6f"]
[ext_resource type="Texture2D" uid="uid://bed7e20ccm13i" path="res://Assets/image (3).png" id="2_cayip"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_158mb"]
texture = ExtResource("2_cayip")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rerr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cayip"]
bg_color = Color(0.50928575, 0.50928634, 0.50928587, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhh6f"]
bg_color = Color(0.7539839, 0.75398386, 0.75398386, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1rerr"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhh6f")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_158mb")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -239.0
offset_top = 98.0
offset_right = 239.0
offset_bottom = 171.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_1rerr")
theme_override_font_sizes/font_size = 75
text = "Horror Night"

[node name="ButtonCon" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -63.0
offset_right = 105.0
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Play" type="Button" parent="ButtonCon"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_1rerr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cayip")
theme_override_styles/hover = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rerr")
text = "Play"

[node name="Options" type="Button" parent="ButtonCon"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_1rerr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cayip")
theme_override_styles/hover = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rerr")
text = "Options"

[node name="Exit" type="Button" parent="ButtonCon"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_1rerr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cayip")
theme_override_styles/hover = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rerr")
text = "Exit"

[connection signal="pressed" from="ButtonCon/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ButtonCon/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonCon/Exit" to="." method="_on_exit_pressed"]
